--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,34 @@
 
 .header h1 {
+    font-size: 60px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 200;
     padding: 5px;
     text-align: center;
     text-transform: capitalize;
 }
+
+#results {
+    display:flex;
+    justify-content: center;
+    padding: 10px;
+}
 #player_choice, #cpu_choice {
+    margin: 1%;
+    border-radius: 50%;
     display: flexbox;
     display: inline-flex;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     border: 2px solid red;
+    padding: 20px;
+    text-align: center;
+}
+#buttons {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+#restart {
     text-align: center;
 }
