--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,18 @@
-
+* {
+    margin: 0;
+}
 body {
-    background-color: red;
+    height: 80vh;
+    background-color: #00203fff;
+}
+.header {
+    background-color: #adefd1ff;
+    color: #00203fff;
+    height: 10vh;
+    width:100%;
 }
 .header h1 {
-    color: blue;
+    color: #00203fff;
     font-size: 60px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 200;
@@ -18,16 +27,15 @@ body {
     padding: 10px;
 }
 #player_choice, #cpu_choice {
-    background-image: url(/assets/images/istockphoto-1174967858-170667a.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 1%;
+    background-color: whitesmoke;
+    margin-top: 2%;
+    margin-left: 2%;
     border-radius: 50%;
     display: flexbox;
     display: inline-flex;
     width: 200px;
     height: 200px;
-    border: 2px solid red;
+    border: 15px solid #adefd1ff;
     padding: 20px;
     text-align: center;
 }
@@ -35,11 +43,18 @@ body {
     display: flex;
     justify-content: center;
 }
+button:hover {
+    color: blue;
+    background-color: #adefd1ff;
+}
 #rock, #paper, #scissors{
-    border-radius: 10%;
+    border-radius: 50%;
+    border: 10px solid #adefd1ff;
     margin: 5px;
     padding: 1%;
     width: 100px;
+    height: 100px;
+
 }
 #restart {
     clear: both;
