--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,10 @@ body {
     padding: 10px;
 }
 #player_choice, #cpu_choice {
-    background-color: whitesmoke;
-    margin-top: 2%;
-    margin-left: 2%;
+    background-color: grey;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
     border-radius: 50%;
     display: flexbox;
     display: inline-flex;
@@ -44,19 +45,42 @@ body {
     justify-content: center;
 }
 button:hover {
-    color: blue;
     background-color: #adefd1ff;
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  
+  30%, 50%, 70% {
+    transform: translate3d(-2px, 0, 0);
+  }
+  40%, 60% {
+    transform: translate3d(2px, 0, 0);
+}
 }
 #rock, #paper, #scissors{
+    background-color: grey;
     border-radius: 50%;
     border: 10px solid #adefd1ff;
-    margin: 5px;
-    padding: 1%;
+    margin: 20px;
     width: 100px;
     height: 100px;
 
 }
-#restart {
-    clear: both;
-    text-align: center;
+#restart{
+    display: flex;
+    justify-content: center;
+}
+#restart button {
+    background-color: grey;
+    border: 10px solid #adefd1ff;
+    margin: 3%;
 }
