--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,8 @@ button:hover {
     background-color: grey;
     border-radius: 50%;
     border: 10px solid #adefd1ff;
+    font-size: 50px;
+    color: black;
     margin: 20px;
     width: 100px;
     height: 100px;
@@ -81,6 +83,9 @@ button:hover {
 }
 #restart button {
     background-color: grey;
-    border: 10px solid #adefd1ff;
+    border: 5px solid #adefd1ff;
+    border-radius: 10%;
+    font-size: 20px;
+    font-weight: 500;
     margin: 3%;
 }
