--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,43 +3,37 @@
    
 }
 body {
-    height: 70vh;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #00203fff;
 }
 .header {
     background-color: #00203fff;
     color: #00203fff;
-    height: 10vh;
     text-align: left;
     width:100%;
 }
 .header h1 {
     text-align: center;
     color: #adefd1ff;
-    font-size: 45px;
+    font-size: 40px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 200;
-    padding: 5px;
     text-transform: capitalize;
 }
 
 #results {
     display:flex;
     justify-content: center;
-    padding: 10px;
 }
-#player_choice, #cpu_choice {
+.last_pick {
     background-color: grey;
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin: 5%;
     border-radius: 50%;
     display: flexbox;
     display: inline-flex;
     width: 200px;
     height: 200px;
     border: 15px solid #adefd1ff;
-    padding: 20px;
     text-align: center;
 }
 #scores{ 
@@ -78,13 +72,13 @@ button:hover {
     transform: translate3d(2px, 0, 0);
 }
 }
-#rock, #paper, #scissors{
+.hand {
     background-color: grey;
     border-radius: 50%;
     border: 10px solid #adefd1ff;
     font-size: 50px;
     color: black;
-    margin: 20px;
+    margin: 5%;
     width: 100px;
     height: 100px;
 
@@ -99,7 +93,7 @@ button:hover {
     border-radius: 10%;
     font-size: 20px;
     font-weight: 500;
-    margin: 3%;
+    margin-top: 3%;
 }
 @media (max-width: 414px) {
     .header {
@@ -112,13 +106,18 @@ button:hover {
     #results {
         flex-direction: column;
         margin: auto;
-        margin-top: 5%;
+       
     }
-    #player_choice, #cpu_choice {
+    .last_pick {
+        justify-content: space-between;
         width: 150px;
         height: 150px;
         margin: auto;
-       
+        margin-top: 3%;
+       padding: 15px;
+    }
+    #scores {
+        margin-top: 10%;
     }
 }
 
