--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,20 @@
 * {
     margin: 0;
-   
+
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #00203fff;
 }
+
 .header {
     background-color: #00203fff;
     color: #00203fff;
     text-align: left;
-    width:100%;
+    width: 100%;
 }
+
 .header h1 {
     text-align: center;
     color: #adefd1ff;
@@ -22,9 +25,10 @@ body {
 }
 
 #results {
-    display:flex;
+    display: flex;
     justify-content: center;
 }
+
 .last_pick {
     background-color: grey;
     margin: 3%;
@@ -37,6 +41,7 @@ body {
     border: 15px solid #adefd1ff;
     font-size: 100px;
 }
+
 #message {
     clear: both;
     color: #adefd1ff;
@@ -47,7 +52,8 @@ body {
     border: 2px solid #adefd1ff;
     border-radius: 3px;
 }
-#scores{ 
+
+#scores {
     clear: both;
     color: #adefd1ff;
     text-align: center;
@@ -58,32 +64,43 @@ body {
     border-radius: 3px;
 
 }
+
 #buttons {
     display: flex;
     justify-content: center;
 }
+
 button:hover {
     background-color: #adefd1ff;
-    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  perspective: 1000px;
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+    transform: translate3d(0, 0, 0);
+    perspective: 1000px;
 }
 
 @keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-  
-  30%, 50%, 70% {
-    transform: translate3d(-2px, 0, 0);
-  }
-  40%, 60% {
-    transform: translate3d(2px, 0, 0);
+
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-2px, 0, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(2px, 0, 0);
+    }
 }
-}
+
 .hand {
     background-color: grey;
     border-radius: 50%;
@@ -94,10 +111,12 @@ button:hover {
     width: 100px;
     height: 100px;
 }
-#restart{
+
+#restart {
     display: flex;
     justify-content: center;
 }
+
 #restart button {
     display: none;
     background-color: grey;
@@ -107,33 +126,35 @@ button:hover {
     font-weight: 500;
     margin-top: 1%;
 }
+
 @media (max-width: 414px) {
     .header {
         height: 3vh;
     }
+
     .header h1 {
         font-size: 24px;
         text-align: center;
     }
+
     #results {
         align-items: center;
         flex-direction: column;
         margin: auto;
-       
+
     }
+
     .last_pick {
         justify-content: space-between;
         width: 120px;
         height: 120px;
         margin: auto;
         margin-top: 3%;
-       padding: 15px;
+        padding: 15px;
     }
+
     #scores {
         margin-top: 10%;
     }
-    
+
 }
-
-
-
