--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 
 .last_pick {
     background-color: grey;
-    margin: 3%;
+    margin: 2%;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -56,10 +56,11 @@ body {
     color: #adefd1ff;
     text-align: center;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 5px;
     width: 400px;
-    height: 50px;
-    border: 2px solid #adefd1ff;
+    height: 40px;
+    font-size: 20px;
+
     border-radius: 3px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -70,6 +71,7 @@ body {
     color: #adefd1ff;
     text-align: center;
     margin: auto;
+    margin-top: 10px;
     width: 400px;
     height: 25px;
     border: 2px solid #adefd1ff;
@@ -81,9 +83,10 @@ body {
 
 #choose {
     text-align: center;
+    font-weight: 100;
 }
 #choose h2 {
-    margin-top: 10px;
+    margin-top: 5px;
     font-weight: 300;
     letter-spacing: 2px;
     color: #adefd1ff;
@@ -131,7 +134,7 @@ button:hover {
     border: 10px solid #adefd1ff;
     font-size: 50px;
     color: black;
-    margin: 2%;
+    margin: 1% 2%;
     width: 130px;
     height: 130px;
 }
