--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,17 +172,28 @@ button:hover {
 
     }
 
+    #message {
+        margin-top: 10px;
+    }
+
     .last_pick {
         justify-content: center;
         width: 150px;
         height: 150px;
         margin: auto;
-        margin-top: 10px;
+        margin-top: 20px;
         padding: 15px;
     }
 
     #scores {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 
+    .hand {
+        margin-top: 20px;
+    }
+    #restart {
+        margin-top: 20px;
+    }
 }
+
