--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,11 @@ body {
 }
 
 .last_pick p {
+    text-align: center;
+    color: #00203fff;
+    font-size: 20px;
+    font-weight: 800;
+    letter-spacing: 2px;
     position: absolute;
     top: 50%;
     left: 50%;
