--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,9 +63,8 @@ body {
     margin: auto;
     margin-top: 5px;
     width: 400px;
-    height: 40px;
+    height: 50px;
     font-size: 20px;
-
     border-radius: 3px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -92,14 +91,12 @@ body {
     margin-top: 10px;
     margin-left: 10%;
     display: block;
-    float: left;
 }
 
 #cpu_score {
     margin-top: 10px;
     margin-right: 10%;
     display: block;
-    float: right;
 }
 
 #choose {
@@ -178,11 +175,11 @@ button:hover {
 
 @media (max-width: 414px) {
     .header {
-        height: 4vh;
+        height: 3vh;
     }
 
     .header h1 {
-        font-size: 28px;
+        font-size: 24px;
         text-align: center;
         letter-spacing: 2px;
         font-weight: 500;
@@ -199,23 +196,58 @@ button:hover {
     }
 
     .last_pick {
+        font-size: 50px;
         justify-content: center;
-        width: 150px;
-        height: 150px;
+        width: 120px;
+        height: 120px;
         margin: auto;
-        margin-top: 20px;
-        padding: 15px;
+        margin-top: 15px;
+        padding: 10px;
     }
 
     #scores {
-        margin-top: 20px;
+        height: 80px;
+        margin-top: 15px;
+        font-size: 20px;
     }
-
+    #player_score {
+        margin-right: 25%;
+    }
+    
     .hand {
-        margin-top: 20px;
+        margin-top: 15px;
     }
 
     #restart {
-        margin-top: 20px;
+        margin-top: 15px;
+    }
+}
+@media (max-width: 320px){
+    * {
+        max-height: 100vh;
+        max-width: 100vw;
+    }
+    .header h1 {
+        font-size: 22px;
+    }
+    #scores {
+        justify-content: center;
+        height: 80px;
+        width: 100vw;
+        font-size: 20px;
+    }
+    .last_pick {
+        width: 85px;
+        height: 85px;
+    }
+    .last_pick p {
+        font-size: 15px;
+    }
+    #results {
+        flex-direction: row;
+    }
+    .hand {
+        width: 85px;
+        height: 85px;    
     }
 }
