--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 /* Displays the previous pick from both the player and the computer */
+
 #results {
     display: flex;
     justify-content: center;
@@ -44,6 +45,8 @@ body {
     font-size: 100px;
     position: relative;
 }
+
+/* ensures the icons stays in the center of the last pick display */
 
 .last_pick p {
     text-align: center;
@@ -88,8 +91,6 @@ body {
     font-weight: 500;
     letter-spacing: 2px;
     position: relative;
-
-
 }
 
 #player_score {
@@ -100,7 +101,6 @@ body {
 #cpu_score {
     margin-top: 10px;
     margin-right: 10%;
-
 }
 
 /* Prompts the player to Choose either rock paper or scissors */
@@ -130,7 +130,7 @@ button:hover {
     perspective: 1000px;
 }
 
-/* code for shake affect found online on codepen*/
+/* code for shake affect found online on codepen (added shake to simulate playing the game in real life */
 @keyframes shake {
 
     10%,
@@ -154,6 +154,7 @@ button:hover {
         transform: translate3d(2px, 0, 0);
     }
 }
+/* the rock paper scissors buttons */
 
 .hand {
     background-color: grey;
@@ -166,7 +167,7 @@ button:hover {
     height: 130px;
 }
 
-/* Button to reset the game after the rounds are complete, hidden until the end of the game*/
+/* Button to reset the game after the rounds are complete, hidden until the end of the game */
 
 #restart {
     display: flex;
@@ -183,7 +184,7 @@ button:hover {
     margin-top: 1%;
 }
 
-/* Media styles for small screens */
+/* Media styles for mobile devices */
 
 @media (max-width: 414px) {
     .header {
@@ -200,7 +201,6 @@ button:hover {
     #results {
         flex-direction: column;
         margin: auto;
-
     }
 
     #message {
@@ -247,6 +247,8 @@ button:hover {
     }
 }
 
+/* media styles for smaller mobile devices */
+
 @media (max-width: 320px) {
     * {
         max-height: 100vh;
@@ -282,7 +284,7 @@ button:hover {
         height: 80px;
     }
 }
-
+/* Media styles for mobile devices in landscape orientation */
 @media only screen and (min-width: 360px) and (orientation: landscape) {
 
     .header h1 {
@@ -292,13 +294,13 @@ button:hover {
         font-weight: 500;
     }
 
-
     #message {
         height: 20px;
         margin-top: 5px;
         font-size: 12px;
         margin-bottom: 10px;
     }
+
     #scores {
         margin: auto;
         height: 20px;
@@ -326,8 +328,8 @@ button:hover {
         height: 80px;
         font-size: 30px;
     }
+
     #choose {
         font-size: 10px;
     }
 }
-
