--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,7 +285,7 @@ button:hover {
     }
 }
 /* Media styles for mobile devices in landscape orientation */
-@media only screen and (min-width: 360px) and (orientation: landscape) {
+@media only screen and (max-height: 420px) and (orientation: landscape) {
 
     .header h1 {
         font-size: 20px;
