--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .header h1 {
-    margin-top: auto;
+    margin-top: 10px;
     text-align: center;
     color: #adefd1ff;
     font-size: 2rem;
@@ -86,7 +86,7 @@ body {
     clear: both;
     color: #adefd1ff;
     display: flex;
-    justify-content: space-around;  
+    justify-content: space-around;
     text-align: center;
     margin: auto;
     width: 400px;
@@ -99,7 +99,7 @@ body {
 }
 
 #player-score {
-    
+
     margin-top: 10px;
     margin-left: 10%;
 }
@@ -160,6 +160,7 @@ button:hover {
         transform: translate3d(2px, 0, 0);
     }
 }
+
 /* the rock paper scissors buttons */
 
 .hand {
@@ -246,8 +247,8 @@ button:hover {
         margin-top: 15px;
     }
 
-    #choose {
-        font-size: 1em;
+    #choose h2 {
+        font-size: 24px;
     }
 
     #restart {
@@ -257,21 +258,22 @@ button:hover {
 
 /* media styles for smaller mobile devices */
 
-@media (max-width: 320px) {
+@media (max-width: 321px) {
     * {
         max-height: 100vh;
         max-width: 100vw;
     }
 
     .header h1 {
-        font-size: 22px;
+        font-size: 14px;
     }
 
     #scores {
+        margin-bottom: 10px;
         margin: auto;
-        height: 80px;
+        height: 50px;
         width: 300px;
-        font-size: 20px;
+        font-size: 14px;
     }
 
     .last-pick {
@@ -283,17 +285,18 @@ button:hover {
         font-size: 15px;
     }
 
-    #results {
-        flex-direction: row;
-    }
-
     .hand {
-        margin: auto;
         justify-content: space-around;
+        margin: auto;
         width: 80px;
         height: 80px;
     }
+
+    #choose h2 {
+        font-size: 14px;
+    }
 }
+
 /* Media styles for mobile devices in landscape orientation */
 @media only screen and (max-height: 420px) and (orientation: landscape) {
 
