--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ body {
     font-weight: 100;
 }
 
-#choose h2 {
+#choose p {
     margin-top: 5px;
     font-weight: 300;
     letter-spacing: 2px;
@@ -247,7 +247,7 @@ button:hover {
         margin-top: 15px;
     }
 
-    #choose h2 {
+    #choose p {
         font-size: 24px;
     }
 
@@ -292,7 +292,7 @@ button:hover {
         height: 80px;
     }
 
-    #choose h2 {
+    #choose p {
         font-size: 14px;
     }
 }
