--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 
 * {
     margin: 0;
-    font-size: calc(15px + 0.390625vw);
 
     
 
@@ -148,6 +147,7 @@ button:hover {
     animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
     transform: translate3d(0, 0, 0);
     perspective: 1000px;
+    cursor: pointer; 
 }
 
 /* code for shake affect found online on codepen (added shake to simulate playing the game in real life */
@@ -248,7 +248,7 @@ button:hover {
         width: 350px;
         height: 50px;
         margin: 10px 25px;
-        font-size: 16px;
+        font-size: 0.9rem;
     }
 
     #player-score {
