--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ body {
     margin-bottom: 25px;
     width: 400px;
     height: 40px;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 3px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -219,7 +219,8 @@ button:hover {
     }
 
     .header h1 {
-        font-size: 18px;
+        margin-top: 2px;
+        font-size: 16px;
         text-align: center;
         letter-spacing: 2px;
         font-weight: 500;
@@ -234,13 +235,14 @@ button:hover {
         width: 370px;
         height: 15px;
         margin-top: 10px;
-        font-size: 12px;
+        font-size: 10px;
+        letter-spacing: 1px;
         }
 
     .last-pick {
         font-size: 50px;
         justify-content: center;
-        width: 35%;
+        width: 30%;
         height: 120px;
         margin: auto;
         margin-top: 10px;
@@ -263,11 +265,12 @@ button:hover {
         justify-content: space-around;
         width: 100px;
         height: 100px;
-        margin-top: 10px;
+        margin-top: 15px;
     }
 
     #choose p {
-        font-size: 12px;
+        font-size: 10px;
+        letter-spacing: 1px;
     }
 
     #restart {
@@ -296,7 +299,8 @@ button:hover {
     }
     #message {
         width: 300px;
-        font-size: 12px;
+        font-size: 10px;
+        letter-spacing: 1px;
     }
 
     .last-pick {
@@ -313,10 +317,12 @@ button:hover {
         margin: auto;
         width: 80px;
         height: 80px;
+        margin-top: 10px;
     }
 
     #choose p {
-        font-size: 12px;
+        font-size: 10px;
+        letter-spacing: 1px;
     }
 }
 
