--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,9 +263,11 @@ button:hover {
 
     .hand {
         justify-content: space-around;
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         margin-top: 15px;
+        border: 8px solid #adefd1ff;
+
     }
 
     #choose p {
